# XrayExplorer

./: .gitignore  CMakeLists.txt  ModelSpace.cpp  Parser.cpp  README.md  app  main.cpp
visualSpace/: cloud.cpp  perspective.cpp  point.cpp
